Closed Bug 1538544 Opened 7 years ago Closed 7 years ago

Intermittent PROCESS-CRASH | Main app process exited normally | application crashed [@ <name omitted>]

Categories

(Core :: Audio/Video: Playback, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: achronop)

References

Details

(Keywords: crash, intermittent-failure, regression)

Crash Data

Attachments

(1 file)

#[markdown(off)]
Filed by: ccoroiu [at] mozilla.com

https://treeherder.mozilla.org/logviewer.html#?job_id=235709645&repo=autoland

https://queue.taskcluster.net/v1/task/S5YnMMeiRPSxOzs41XozYQ/runs/0/artifacts/public/logs/live_backing.log

[task 2019-03-24T08:38:30.662Z] 08:38:30 INFO - TEST-START | dom/media/test/test_autoplay_policy_web_audio_AudioParamStream.html
[task 2019-03-24T08:38:31.035Z] 08:38:31 INFO - GECKO(1769) | [Parent 1769, Gecko_IOThread] WARNING: pipe error (71): Connection reset by peer: file /builds/worker/workspace/build/src/ipc/chromium/src/chrome/common/ipc_channel_posix.cc, line 357
[task 2019-03-24T08:38:31.043Z] 08:38:31 INFO - GECKO(1769) | ###!!! [Parent][MessageChannel] Error: (msgtype=0x1F0088,name=PBrowser::Msg_Destroy) Channel error: cannot send/recv
[task 2019-03-24T08:38:31.120Z] 08:38:31 INFO - GECKO(1769) | A content process crashed and MOZ_CRASHREPORTER_SHUTDOWN is set, shutting down
[task 2019-03-24T08:38:31.529Z] 08:38:31 INFO - GECKO(1769) | 1553416711526 Marionette TRACE Received observer notification xpcom-will-shutdown
[task 2019-03-24T08:38:31.530Z] 08:38:31 INFO - GECKO(1769) | 1553416711527 Marionette INFO Stopped listening on port 2828
[task 2019-03-24T08:38:31.532Z] 08:38:31 INFO - GECKO(1769) | 1553416711527 Marionette DEBUG Remote service is inactive
[task 2019-03-24T08:38:31.939Z] 08:38:31 INFO - TEST-INFO | Main app process: exit 0
[task 2019-03-24T08:38:31.939Z] 08:38:31 INFO - runtests.py | Application ran for: 0:00:35.474312
[task 2019-03-24T08:38:31.940Z] 08:38:31 INFO - zombiecheck | Reading PID log: /tmp/tmpVF6Xykpidlog
[task 2019-03-24T08:38:31.940Z] 08:38:31 INFO - ==> process 1769 launched child process 1792
[task 2019-03-24T08:38:31.941Z] 08:38:31 INFO - ==> process 1769 launched child process 1823
[task 2019-03-24T08:38:31.941Z] 08:38:31 INFO - ==> process 1769 launched child process 1846
[task 2019-03-24T08:38:31.942Z] 08:38:31 INFO - ==> process 1769 launched child process 1892
[task 2019-03-24T08:38:31.942Z] 08:38:31 INFO - ==> process 1769 launched child process 1917
[task 2019-03-24T08:38:31.943Z] 08:38:31 INFO - ==> process 1769 launched child process 2120
[task 2019-03-24T08:38:31.943Z] 08:38:31 INFO - zombiecheck | Checking for orphan process with PID: 1792
[task 2019-03-24T08:38:31.944Z] 08:38:31 INFO - zombiecheck | Checking for orphan process with PID: 1892
[task 2019-03-24T08:38:31.944Z] 08:38:31 INFO - zombiecheck | Checking for orphan process with PID: 2120
[task 2019-03-24T08:38:31.945Z] 08:38:31 INFO - zombiecheck | Checking for orphan process with PID: 1846
[task 2019-03-24T08:38:31.945Z] 08:38:31 INFO - zombiecheck | Checking for orphan process with PID: 1917
[task 2019-03-24T08:38:31.946Z] 08:38:31 INFO - zombiecheck | Checking for orphan process with PID: 1823
[task 2019-03-24T08:38:31.946Z] 08:38:31 INFO - mozcrash Downloading symbols from: https://queue.taskcluster.net/v1/task/OrS5NqOUQeCDACd9a4sF3A/artifacts/public/build/target.crashreporter-symbols.zip
[task 2019-03-24T08:38:40.091Z] 08:38:40 INFO - mozcrash Copy/paste: /builds/worker/workspace/build/linux64-minidump_stackwalk /tmp/tmpoFi3Zi.mozrunner/minidumps/00771cea-f99a-4e27-8a38-2c1d3625075e.dmp /tmp/tmp_B9gEh
[task 2019-03-24T08:38:51.330Z] 08:38:51 INFO - mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/00771cea-f99a-4e27-8a38-2c1d3625075e.dmp
[task 2019-03-24T08:38:51.331Z] 08:38:51 INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/00771cea-f99a-4e27-8a38-2c1d3625075e.extra
[task 2019-03-24T08:38:51.451Z] 08:38:51 INFO - PROCESS-CRASH | Main app process exited normally | application crashed [@ <name omitted>]
[task 2019-03-24T08:38:51.451Z] 08:38:51 INFO - Crash dump filename: /tmp/tmpoFi3Zi.mozrunner/minidumps/00771cea-f99a-4e27-8a38-2c1d3625075e.dmp
[task 2019-03-24T08:38:51.451Z] 08:38:51 INFO - Operating system: Linux
[task 2019-03-24T08:38:51.452Z] 08:38:51 INFO - 0.0.0 Linux 4.4.0-1014-aws #14taskcluster1-Ubuntu SMP Tue Apr 3 10:27:00 UTC 2018 x86_64
[task 2019-03-24T08:38:51.453Z] 08:38:51 INFO - CPU: x86
[task 2019-03-24T08:38:51.455Z] 08:38:51 INFO - GenuineIntel family 6 model 62 stepping 4
[task 2019-03-24T08:38:51.457Z] 08:38:51 INFO - 2 CPUs
[task 2019-03-24T08:38:51.458Z] 08:38:51 INFO -
[task 2019-03-24T08:38:51.460Z] 08:38:51 INFO - GPU: UNKNOWN
[task 2019-03-24T08:38:51.461Z] 08:38:51 INFO -
[task 2019-03-24T08:38:51.463Z] 08:38:51 INFO - Crash reason: SIGSEGV /SEGV_MAPERR
[task 2019-03-24T08:38:51.464Z] 08:38:51 INFO - Crash address: 0x8
[task 2019-03-24T08:38:51.466Z] 08:38:51 INFO - Process uptime: not available
[task 2019-03-24T08:38:51.467Z] 08:38:51 INFO -
[task 2019-03-24T08:38:51.469Z] 08:38:51 INFO - Thread 38 (crashed)
[task 2019-03-24T08:38:51.470Z] 08:38:51 INFO - 0 libxul.so!<name omitted> [AudioDeviceInfo.cpp:529782921812aaf0558fbb22384b3051174657d3 : 60 + 0x0]
[task 2019-03-24T08:38:51.472Z] 08:38:51 INFO - eip = 0xf09d3c64 esp = 0xe553faac ebp = 0xe553fbb8 ebx = 0xf5390000
[task 2019-03-24T08:38:51.473Z] 08:38:51 INFO - esi = 0x00000000 edi = 0xe553fb18 eax = 0x00000000 ecx = 0xe553fb28
[task 2019-03-24T08:38:51.475Z] 08:38:51 INFO - edx = 0x00000001 efl = 0x00210282
[task 2019-03-24T08:38:51.476Z] 08:38:51 INFO - Found by: given as instruction pointer in context
[task 2019-03-24T08:38:51.478Z] 08:38:51 INFO - 1 libxul.so!mozilla::AudioCallbackDriver::Init() [GraphDriver.cpp:529782921812aaf0558fbb22384b3051174657d3 : 579 + 0x8]
[task 2019-03-24T08:38:51.479Z] 08:38:51 INFO - eip = 0xf0a025ac esp = 0xe553fab0 ebp = 0xe553fbb8 ebx = 0xf5390000
[task 2019-03-24T08:38:51.480Z] 08:38:51 INFO - esi = 0x00000000 edi = 0xe553fb18
[task 2019-03-24T08:38:51.482Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.483Z] 08:38:51 INFO - 2 libxul.so!mozilla::AsyncCubebTask::Run() [GraphDriver.cpp:529782921812aaf0558fbb22384b3051174657d3 : 437 + 0xb]
[task 2019-03-24T08:38:51.485Z] 08:38:51 INFO - eip = 0xf0a0234d esp = 0xe553fbc0 ebp = 0xe553fbe8 ebx = 0xf5390000
[task 2019-03-24T08:38:51.486Z] 08:38:51 INFO - esi = 0xf53a4504 edi = 0xe11366e0
[task 2019-03-24T08:38:51.488Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.489Z] 08:38:51 INFO - 3 libxul.so!nsThreadPool::Run() [nsThreadPool.cpp:529782921812aaf0558fbb22384b3051174657d3 : 244 + 0x8]
[task 2019-03-24T08:38:51.491Z] 08:38:51 INFO - eip = 0xeed39c4d esp = 0xe553fbf0 ebp = 0xe553fcd8 ebx = 0xf5390000
[task 2019-03-24T08:38:51.492Z] 08:38:51 INFO - esi = 0xe432f0c0 edi = 0xe11366e0
[task 2019-03-24T08:38:51.493Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.494Z] 08:38:51 INFO - 4 libxul.so!non-virtual thunk to nsThreadPool::Run() [nsThreadPool.cpp:529782921812aaf0558fbb22384b3051174657d3 : 0 + 0x5]
[task 2019-03-24T08:38:51.495Z] 08:38:51 INFO - eip = 0xeed39d9f esp = 0xe553fce0 ebp = 0xe553fce8 ebx = 0xf5390000
[task 2019-03-24T08:38:51.496Z] 08:38:51 INFO - esi = 0x00000001 edi = 0xdf5fda00
[task 2019-03-24T08:38:51.497Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.498Z] 08:38:51 INFO - 5 libxul.so!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:529782921812aaf0558fbb22384b3051174657d3 : 1180 + 0x8]
[task 2019-03-24T08:38:51.499Z] 08:38:51 INFO - eip = 0xeed36120 esp = 0xe553fcf0 ebp = 0xe55401c8 ebx = 0xf5390000
[task 2019-03-24T08:38:51.500Z] 08:38:51 INFO - esi = 0x00000001 edi = 0xdf5fda00
[task 2019-03-24T08:38:51.501Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.502Z] 08:38:51 INFO - 6 libxul.so!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:529782921812aaf0558fbb22384b3051174657d3 : 482 + 0x16]
[task 2019-03-24T08:38:51.503Z] 08:38:51 INFO - eip = 0xeed384da esp = 0xe55401d0 ebp = 0xe55401f8 ebx = 0xf5390000
[task 2019-03-24T08:38:51.504Z] 08:38:51 INFO - esi = 0xe55401eb edi = 0xe9cd6890
[task 2019-03-24T08:38:51.505Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.506Z] 08:38:51 INFO - 7 libxul.so!mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [MessagePump.cpp:529782921812aaf0558fbb22384b3051174657d3 : 303 + 0x13]
[task 2019-03-24T08:38:51.507Z] 08:38:51 INFO - eip = 0xef203646 esp = 0xe5540200 ebp = 0xe5540238 ebx = 0xf5390000
[task 2019-03-24T08:38:51.509Z] 08:38:51 INFO - esi = 0xe47f5640 edi = 0xe9cd6890
[task 2019-03-24T08:38:51.511Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.512Z] 08:38:51 INFO - 8 libxul.so!MessageLoop::Run() [message_loop.cc:529782921812aaf0558fbb22384b3051174657d3 : 315 + 0x9]
[task 2019-03-24T08:38:51.513Z] 08:38:51 INFO - eip = 0xef1c8d56 esp = 0xe5540240 ebp = 0xe5540268 ebx = 0xf5390000
[task 2019-03-24T08:38:51.514Z] 08:38:51 INFO - esi = 0xe5540298 edi = 0xdf5fda00
[task 2019-03-24T08:38:51.515Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.516Z] 08:38:51 INFO - 9 libxul.so!nsThread::ThreadFunc(void*) [nsThread.cpp:529782921812aaf0558fbb22384b3051174657d3 : 454 + 0xe]
[task 2019-03-24T08:38:51.517Z] 08:38:51 INFO - eip = 0xeed33cb6 esp = 0xe5540270 ebp = 0xe5540328 ebx = 0xf5390000
[task 2019-03-24T08:38:51.518Z] 08:38:51 INFO - esi = 0xe5540298 edi = 0xdf5fda00
[task 2019-03-24T08:38:51.519Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.520Z] 08:38:51 INFO - 10 libnspr4.so!_pt_root [ptthread.c:529782921812aaf0558fbb22384b3051174657d3 : 201 + 0x6]
[task 2019-03-24T08:38:51.521Z] 08:38:51 INFO - eip = 0xf732494a esp = 0xe5540330 ebp = 0xe5540368 ebx = 0xf7333000
[task 2019-03-24T08:38:51.522Z] 08:38:51 INFO - esi = 0xf7006080 edi = 0xe9594dc0
[task 2019-03-24T08:38:51.522Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.523Z] 08:38:51 INFO - 11 libpthread-2.23.so + 0x6295
[task 2019-03-24T08:38:51.523Z] 08:38:51 INFO - eip = 0xf76f3295 esp = 0xe5540370 ebp = 0xe5540428 ebx = 0x00000000
[task 2019-03-24T08:38:51.524Z] 08:38:51 INFO - esi = 0x00000000 edi = 0x003d0f00
[task 2019-03-24T08:38:51.525Z] 08:38:51 INFO - Found by: call frame info
[task 2019-03-24T08:38:51.526Z] 08:38:51 INFO - 12 libc-2.23.so + 0xe70ae
[task 2019-03-24T08:38:51.526Z] 08:38:51 INFO - eip = 0xf741e0ae esp = 0xe5540430 ebp = 0x00000000
[task 2019-03-24T08:38:51.527Z] 08:38:51 INFO - Found by: previous frame's frame pointer

Pushed by achronopoulos@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/df3fda80bbeb Device info pointer can be null and must be checked to avoid crashes. r=padenot
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Assignee: nobody → achronop
See Also: → 1653747
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: