Bug 1538544 - Device info pointer can be null and must be checked to avoid crashes. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D24684